Implemented Generic activity and fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".ui.activity.FoodActivity" />
         <activity android:name=".ui.activity.CategoryListActivity" />
         <activity android:name=".ui.activity.DrinkListActivity" />
-        <activity android:name=".ui.activity.DetailDrinksActivity"></activity>
+        <activity android:name=".ui.activity.DetailDrinksActivity"/>
     </application>
 
 </manifest>
